--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "mongoose": "^5.9.19"
+    "mongoose": "^5.9.19",
+    "mqtt": "^4.1.0",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "request": "^2.81.0",
