--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "concurrently": "^5.2.0",
     "config": "^3.3.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
